# wheeled_legged_robot

./: .gitignore  README.md  立即開始.md
ROS2_Packages/src/people_follower/: CUDA成功方案_JetPack62.md  README.md  check_tensorrt_deps.py  convert_to_tensorrt.py  package.xml  setup.cfg  setup.py  test_detection.py  test_detection_ros2.py  test_detection_yolo.py
ROS2_Packages/src/people_follower/config/: people_follower_params.yaml  people_follower_yolo_params.yaml  posture_mimic_mediapipe_params.yaml  posture_mimic_params.yaml
ROS2_Packages/src/people_follower/launch/: people_follower.launch.py  people_follower_with_camera.launch.py  people_follower_with_mimic.launch.py  people_follower_yolo.launch.py  posture_mimic.launch.py  posture_mimic_mediapipe.launch.py
ROS2_Packages/src/people_follower/people_follower/: __init__.py  people_follower_node.py  people_follower_yolo.py  posture_mimic_mediapipe_node.py  posture_mimic_node.py
ROS2_Packages/src/wheel_legged_urdf_pkg/: CMakeLists.txt  package.xml
ROS2_Packages/src/wheel_legged_urdf_pkg/config/: display.rviz  joint_names_wheel_legged_urdf_pkg.yaml
ROS2_Packages/src/wheel_legged_urdf_pkg/launch/: display.launch  display.launch.py  gazebo.launch
ROS2_Packages/src/wheel_legged_urdf_pkg/meshes/: imu_link.STL  left_back_motor_link.STL  left_front_motor_link.STL  left_l1_link.STL  left_l4_link.STL  left_wheel_motor_link.STL  lidar_link.STL  right_back_motor_link.STL  right_front_motor_link.STL  right_l1_link.STL  right_l4_link.STL  right_wheel_motor_link.STL
ROS2_Packages/src/wheel_legged_urdf_pkg/urdf/: wheel_legged_urdf_pkg.csv  wheel_legged_urdf_pkg.urdf
ROS2_Packages/src/wheel_legged_urdf_pkg/urdf/wheel_legged_urdf_pkg/: legged_sim.usd  wheel_legged_urdf_pkg.usd
ROS2_Packages/src/wheel_legged_urdf_pkg/urdf/wheel_legged_urdf_pkg/configuration/: wheel_legged_urdf_pkg_physics.usd  wheel_legged_urdf_pkg_robot.usd  wheel_legged_urdf_pkg_sensor.usd
ROS2_Packages/src/wheeled_legged_pkg/: CMakeLists.txt  package.xml  一鍵啟動使用說明.md
ROS2_Packages/src/wheeled_legged_pkg/config/: nav2_params.yaml
ROS2_Packages/src/wheeled_legged_pkg/launch/: full_navigation_auto.launch.py  mapping_with_lidar.launch.py  navigation_with_lidar.launch.py
ROS2_Packages/src/wheeled_legged_pkg/scripts/: auto_init_amcl.py  check_mapping_setup.sh  init_amcl_pose.sh  start_full_navigation.sh
ROS2_Packages/src/wheeled_legged_pkg/src/: robot_functions.cpp  robot_functions.h  robot_structs.h  wl_base_node.cpp
